Make the portrait floorplan smaller on mobiles to avoid extending further than the screen size

--- a/less/custom.less
+++ b/less/custom.less
@@ -1949,7 +1949,7 @@ body.html {
     margin: 2*@line-height-computed auto;
 
     // Mobile:
-      max-width: 260px;
+      max-width: 200px;
     @media (min-width: @screen-sm-min) {
       max-width: 560px;
     }
